[package]
name = "ynab-influx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ynab-rs = { git = "https://github.com/MichelBrodatzki/ynab-rs" }
influxdb = { version = "0.6", features = ["derive"] }
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["derive"] }
